--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -40,7 +40,7 @@ console.log(images);
     <div class="flex gap-2 items-center justify-start">
       {frontmatter.tags.map((tag) => (
       <a href=`/blog/tags/${tag}`>
-        <p class="transition border-dotted border-2 border-primary hover:bg-primary rounded-full p-1 px-2 font-semibold hover:text-white w-min hover:underline">{tag}</p>
+        <p class="transition border-dotted border-2 border-primary hover:bg-primary rounded-full p-1 px-2 font-semibold hover:text-white w-max hover:underline">{tag}</p>
       </a>
     ))}
     </div>
@@ -49,7 +49,7 @@ console.log(images);
 
 
   <div
-    class="mx-auto px-8 mb-32 max-w-4xl text-lg prose prose-h1:font-bold prose-h2:text-xl md:prose-h2:text-3xl prose-h3:text-lg md:prose-h3:text-xl leading-8 font-sans rounded-md"
+    class="mx-auto px-8 mb-32 max-w-4xl text-lg prose prose-h1:font-bold prose-h2:text-xl prose-h1:text-2xl md:prose-h1:text-4xl md:prose-h2:text-3xl prose-h3:text-lg md:prose-h3:text-xl leading-8 font-sans rounded-md"
   >
 
     <slot />
