--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -16,13 +16,13 @@ const sortedPosts = sortPosts(allPosts).sortByDate();
     <h2 class="md:text-5xl text-2xl font-slab font-bold">
       Using a Randomness Beacon to Talk to God
     </h2>
-    <p class="italic mt-8 md:text-lg">
+    <p class="italic mt-4 md:text-lg">
       Similar to the one found at the National Institute of Standards and
       Technology
     </p>
   </div>
 
-  <div class="max-w-4xl mx-auto p-4">
+  <div class="max-w-4xl mx-auto px-4">
     <TagList />
   </div>
 
@@ -35,6 +35,7 @@ const sortedPosts = sortPosts(allPosts).sortByDate();
             title={post.data.title}
             pubDate={post.data.pubDate}
             description={post.data.description}
+            tags={post.data.tags}
           />
         ))
       }
