--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -27,9 +27,7 @@ const { posts } = Astro.props;
 ---
 
 <Layout title={tag}>
-  <div
-    class="max-w-4xl m-4 p-4 mx-auto md:mt-8 mt-4"
-  >
+  <div class="max-w-4xl m-4 p-4 mx-auto md:mt-8 mt-4">
     <div class="mb-8">
       <h2 class="text-2xl md:text-4xl font-slab font-bold">
         Posts tagged with <span class="italic">#{tag}</span>
@@ -44,6 +42,7 @@ const { posts } = Astro.props;
               url={`/blog/${post.slug}`}
               description={post.data.description}
               pubDate={post.data.pubDate}
+              tags={post.data.tags}
             />
           ))
         }
