--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,10 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-
+    <script
+      defer
+      src="http://umami-vkwsc0w8kkcgcwc8c8wwgc80.86.106.182.176.sslip.io/script.js"
+      data-website-id="45ff836c-48c9-4aff-b079-e548183c5b98"></script>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
@@ -49,7 +52,7 @@ const { title } = Astro.props;
     </main>
     <Footer />
 
-    <script async>
+    <script>
       import AOS from 'aos';
       import 'aos/dist/aos.css';
       AOS.init();
