removed aos from homepage hero text, replaced umami server with cusom domain

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,6 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
     lg:mb-60"
   >
     <h1
-      data-aos="fade-right"
       class="font-slab text-3xl md:place-self-auto self-start lg:self-end md:text-6xl font-bold [grid-area:head]"
     >
       Crockett Ford
@@ -57,7 +56,7 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
     </div>
 
     <div class="[grid-area:para] my-auto flex flex-col gap-8 pr-8 text-lg">
-      <p data-aos="fade-in" class="font-sans">
+      <p class="font-sans">
         I'm a <strong>developer</strong> who makes <strong>end-to-end</strong> apps,
         tools, websites and more. If you're here to see what I can do, take a look
         at some of my <a
@@ -66,7 +65,7 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
         > below.
       </p>
 
-      <p data-aos="fade-in" class="font-sans">
+      <p class="font-sans">
         This website is equal parts professional and personal. I was recently
         inspired by <a
           class="text-primary-content font-semibold hover:underline"
