--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -3,14 +3,16 @@ import Navigation from './Navigation.astro';
 import ThemeController from './ThemeController.astro';
 ---
 
-<header
-  class="w-screen flex justify-between items-center py-8 sm:px-8 px-4 text-sm h-20 lg:text-lg"
->
-  <div class="font-slab font-bold text-secondary"></div>
-  <div class="w-min flex shrink items-center gap-8">
-    <ThemeController />
+<header class="w-screen min-h-20 grid grid-cols-3 px-8">
+  <div
+    class="col-start-2 place-self-center w-min flex shrink items-center gap-8"
+
+  >
     <nav>
       <Navigation />
     </nav>
+  </div>
+  <div class="col-start-3 justify-self-end self-center">
+    <ThemeController />
   </div>
 </header>
