--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -4,12 +4,14 @@ import type { ImageMetadata } from 'astro';
 import {getImage} from 'astro:assets';
 import Layout from './Layout.astro';
 import RelatedPostsBox from '../components/RelatedPostsBox.astro';
+import ViewCounter from '../components/ViewCounter.astro';
+import ViewCounterLoading from '../components/ViewCounterLoading.astro';
 import { imageMetadata } from 'astro/assets/utils';
 const { frontmatter } = Astro.props;
 const hasImage = frontmatter.image ? true : false;
 
 const images = import.meta.glob<{default: ImageMetadata}>('/src/images/*.{jpeg,jpg,png,gif}');
-console.log(images);
+const slug = Astro.params.slug;
 ---
 
 <Layout title={frontmatter.title}>
@@ -35,6 +37,9 @@ console.log(images);
 
   <div class="m-4 py-4 px-8 flex flex-col gap-4 md:max-w-4xl mx-auto">
     <h1 class="font-slab font-bold text-2xl sm:text-4xl">{frontmatter.title}</h1>
+    <ViewCounter server:defer slug={slug}>
+      <ViewCounterLoading slot="fallback"></ViewCounterLoading>
+    </ViewCounter>
     <div class="italic text-xl">{frontmatter.description}</div>
     <div class="text-sm">{frontmatter.pubDate.toDateString()}</div>
     <div class="flex gap-2 items-center justify-start">
