--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,125 +1,120 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import LandingHero from '../components/LandingHero.astro';
+import PortfolioItem from '../components/PortfolioItem.astro';
+import PortfolioItemMirrored from '../components/PortfolioItemMirrored.astro';
+import PortfolioCard from '../components/PortfolioCard.astro';
+import AboutTimeline from '../components/AboutTimeline.astro';
+import FixedSocialsBox from '../components/FixedSocialsBox.astro';
+
 import { Image } from 'astro:assets';
 import { getImage } from 'astro:assets';
+
 import localBioPhoto from '../images/portrait-danielle-2022.jpg';
 import scraperPortImg from '../images/mercari-scraper-email-screenshot.png';
+import openLaunchImg from '../images/open-launch-email-screen.png';
+import datapartyImg from '../images/dataparty-website.png';
 import shiftsGif from '../images/shifts-resized.gif';
-import FixedSocialsBox from '../components/FixedSocialsBox.astro';
 import backgroundImage from '../images/md-geometric-bg.jpg';
-import PortfolioItem from '../components/PortfolioItem.astro';
-import PortfolioCard from '../components/PortfolioCard.astro';
+
 import SocialIcon from '../components/SocialIcon.astro';
 const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
 ---
 
 <Layout title="Crockett Ford">
   <FixedSocialsBox />
-
-  <div
-    class="md:container md:mx-auto grid
-    [grid-template-rows:repeat(auto-fill,auto)]
-    [grid-template-areas:'head''para''image']
-    
-    place-items-start
-    items-center
-    px-4
-    mb-16
-    gap-2
-    md:px-28
-    md:py-10
-    md:mt-8
-    md:h-min
-    md:[grid-template-areas:'head_image''para_image']
-    md:[grid-template-columns:2fr_1.5fr]
-    md:[grid-template-rows:1fr_2fr]
-    lg:my-24
-    lg:mb-60"
-  >
-    <h1
-      class="font-slab text-3xl md:place-self-auto self-start lg:self-end md:text-6xl font-bold [grid-area:head]"
-    >
-      Crockett Ford
-    </h1>
-
-    <div
-      data-aos="fade-left"
-      class="mask mask-parallelogram-3 w-1/2 md:w-9/12 mx-auto [grid-area:image]"
-    >
-      <Image
-        src={localBioPhoto}
-        inferSize
-        quality={70}
-        alt="A portrait of Crockett"
-        class=""
-      />
-    </div>
-
-    <div class="[grid-area:para] my-auto flex flex-col gap-8 pr-8 text-lg">
-      <p class="font-sans">
-        I'm a <strong>developer</strong> who makes <strong>end-to-end</strong> apps,
-        tools, websites and more. If you're here to see what I can do, take a look
-        at some of my <a
-          class="text-primary-content font-semibold hover:underline"
-          href="#work">work</a
-        > below.
-      </p>
-
-      <p class="font-sans">
-        This website is equal parts professional and personal. I was recently
-        inspired by <a
-          class="text-primary-content font-semibold hover:underline"
-          href="https://www.youtube.com/watch?v=_x6SCSz7g5I"
-          target="_blank"
-          rel="noopener noreferrer">this video</a
-        > to reconsider the potential of a personal website. So, to mix a bit of
-        the old internet into the new, here you can find my <a
-          class="text-primary-content font-semibold hover:underline"
-          href="/blog/">blog</a
-        >, where I write about movies, books, and anything else that has my
-        attention.
-      </p>
-    </div>
-  </div>
-  <div id="work" class="p-4 min-h-72 bg-base-300 w-full mx-auto px-4">
-    <div class="container mx-auto my-0 p-2 md:p-4 md:w-8/12 md:px-24 w-full">
-      <h2 class="font-sans font-bold text-2xl sm:text-4xl">
+  <LandingHero />
+  <section id="work" class="bg-base-300 w-full">
+    <div class="container p-6 mx-auto max-w-7xl">
+      <h2 class="font-sans my-4 font-extrabold text-3xl sm:text-4xl">
         Selected Projects
       </h2>
+
+      <ul class="space-y-0">
+        <PortfolioItem
+          projectTitle="DataParty"
+          projectDescription="The website for DataParty, the web development company I started in late 2024. Built using Astro and Alpine.js."
+          tagList={['Astro', 'Alpine.js', 'Web Design']}
+          iconLinks={[
+            {
+              link: 'https://dataparty.dev',
+              icon: 'bi:box-arrow-up-right',
+              ariaLabel: 'Link to DataParty website',
+              size: 25,
+            },
+          ]}
+          imageSrc={datapartyImg}
+          imageLink="https://dataparty.dev"
+          imageAlt="The DataParty website landing page."
+        />
+        <PortfolioItemMirrored
+          projectTitle="OpenLaunch"
+          projectDescription="A Blazor app for managing pre-launch waitlists and email subscriptions. Includes AWS SES integration, templating, embedded image hosting, and unsubscribe link generation. Designed as an all-in-one, self-hostable solution."
+          tagList={['Blazor', 'Asp.Net Core Identity', 'AWS']}
+          iconLinks={[
+            {
+              link: 'https://github.com/frockett/OpenLaunch',
+              icon: 'bi:github',
+              ariaLabel: 'Github',
+            },
+          ]}
+          imageSrc={openLaunchImg}
+          imageLink="https://github.com/frockett/OpenLaunch"
+          imageAlt="The OpenLaunch email templating screen."
+        />
+        <PortfolioItem
+          projectTitle="Price alert bot"
+          projectDescription="A simple .net app that performs keyword searches on mercari and sends hourly email alerts for listings within a specified price range. Built to save resellers time sourcing new listings."
+          tagList={['.Net', 'Playwright', 'Docker']}
+          iconLinks={[
+            {
+              link: 'https://github.com/frockett/product-scraper',
+              icon: 'bi:github',
+              ariaLabel: 'Github',
+            },
+          ]}
+          imageSrc={scraperPortImg}
+          imageLink="https://github.com/frockett/product-scraper"
+          imageAlt="a screenshot of an email containing a list full of flagged listings"
+        />
+        <!-- <PortfolioItemMirrored
+          projectTitle="Shift-Logger API"
+          projectDescription="An ASP.net Core Web API and a console app that consumes it. Log shifts and track employees."
+          tagList={['.Net', 'Asp.Net Core', 'Web API', 'Swagger']}
+          iconLinks={[
+            {
+              link: 'https://github.com/frockett/Console-ShiftTracker',
+              icon: 'bi:github',
+              ariaLabel: 'Github',
+            },
+          ]}
+          imageSrc={shiftsGif}
+          imageLink="https://github.com/frockett/Console-ShiftTracker"
+          imageAlt="A gif showing the operation of the shift tracker console app."
+        /> -->
+      </ul>
+      <div class="w-full flex justify-center py-6">
+        <a
+          href="/portfolio"
+          class="bg-primary inline-flex gap-1.5 items-center group hover:bg-primary/80 transition-all dark:text-white text-base-content px-8 py-6 font-sans text-xl font-semibold rounded-sm"
+          ><span>Full Portfolio</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="size-4 group-hover:translate-x-1 transition-transform"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="3"
+              d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+          </svg></a
+        >
+      </div>
     </div>
-    <ul>
-      <PortfolioItem
-        projectTitle="Price alert bot"
-        projectDescription="A simple .net app that performs keyword searches on mercari and sends hourly email alerts for listings within a specified price range. Built to save resellers time sourcing new listings."
-        tagList={['.Net', 'Playwright', 'Docker']}
-        iconLinks={[
-          {
-            link: 'https://github.com/frockett/product-scraper',
-            icon: 'bi:github',
-            ariaLabel: 'Github',
-          },
-        ]}
-        imageSrc={scraperPortImg}
-        imageLink="https://github.com/frockett/product-scraper"
-        imageAlt="a screenshot of an email containing a list full of flagged listings"
-      />
-      <PortfolioItem
-        projectTitle="Shift-Logger API"
-        projectDescription="An ASP.net Core Web API and a console app that consumes it. Log shifts and track employees."
-        tagList={['.Net', 'Asp.Net Core', 'Web API', 'Swagger']}
-        iconLinks={[
-          {
-            link: 'https://github.com/frockett/Console-ShiftTracker',
-            icon: 'bi:github',
-            ariaLabel: 'Github',
-          },
-        ]}
-        imageSrc={shiftsGif}
-        imageLink="https://github.com/frockett/Console-ShiftTracker"
-        imageAlt="A gif showing the operation of the shift tracker console app."
-      />
-    </ul>
-  </div>
+  </section>
   <div class="mx-auto mt-8 p-8 px-16 md:max-w-7xl">
     <h2 class="font-sans text-2xl sm:text-4xl font-bold">Other Projects</h2>
   </div>
@@ -174,6 +169,9 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
       ]}
     />
   </div>
+  <section>
+    <AboutTimeline />
+  </section>
 </Layout>
 
 <style>
