added post comments, top articles styles and showing most recent article

--- a/src/components/LandingHero.astro
+++ b/src/components/LandingHero.astro
@@ -7,7 +7,7 @@ import localBioPhoto from '../images/portrait-danielle-2022.jpg';
 
 <section class="max-w-7xl container mx-auto px-6">
   <div
-    class="grid grid-cols-1 py-10 lg:py-20 md:grid-cols-2 lg:gap-8 place-items-center"
+    class="grid grid-cols-1 pt-10 pb-6 lg:pt-20 md:grid-cols-2 lg:gap-8 place-items-center"
   >
     <div class="space-y-8 pb-6">
       <h1
