--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,21 +77,6 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
           imageLink="https://github.com/frockett/product-scraper"
           imageAlt="a screenshot of an email containing a list full of flagged listings"
         />
-        <!-- <PortfolioItemMirrored
-          projectTitle="Shift-Logger API"
-          projectDescription="An ASP.net Core Web API and a console app that consumes it. Log shifts and track employees."
-          tagList={['.Net', 'Asp.Net Core', 'Web API', 'Swagger']}
-          iconLinks={[
-            {
-              link: 'https://github.com/frockett/Console-ShiftTracker',
-              icon: 'bi:github',
-              ariaLabel: 'Github',
-            },
-          ]}
-          imageSrc={shiftsGif}
-          imageLink="https://github.com/frockett/Console-ShiftTracker"
-          imageAlt="A gif showing the operation of the shift tracker console app."
-        /> -->
       </ul>
       <div class="w-full flex justify-center py-6">
         <a
@@ -115,7 +100,7 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
       </div>
     </div>
   </section>
-  <div class="mx-auto mt-8 p-8 px-16 md:max-w-7xl">
+  <!-- <div class="mx-auto mt-8 p-8 px-16 md:max-w-7xl">
     <h2 class="font-sans text-2xl sm:text-4xl font-bold">Other Projects</h2>
   </div>
   <div
@@ -168,10 +153,10 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
         },
       ]}
     />
-  </div>
-  <section>
+  </div> -->
+  <!-- <section>
     <AboutTimeline />
-  </section>
+  </section> -->
 </Layout>
 
 <style>
