--- a/src/components/header/Navigation.astro
+++ b/src/components/header/Navigation.astro
@@ -5,7 +5,7 @@
 <div id="header-links" class="font-sans font-bold flex gap-5">
   <a href="/" class="header-nav-link">Home</a>
   <a class="header-nav-link" href="/#work">Projects</a>
-  <a class="header-nav-link" href="/blog/">Blog</a>
+  <a class="header-nav-link" href="/blog">Blog</a>
   <!-- <a
     id="resume-button"
     data-umami-event="Resume Download"
