--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,13 @@ import Footer from '../components/footer/Footer.astro';
 import Header from '../components/header/Header.astro';
 interface Props {
   title: string;
+  description?: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
+
+const canonicalUrl = new URL(Astro.url.pathname, Astro.site).toString();
+const showMetaDescription: boolean = !!description;
 ---
 
 <!doctype html>
@@ -32,12 +36,7 @@ const { title } = Astro.props;
         localStorage.setItem('theme', theme);
       } catch (e) {}
     </script>
-    <script>
-      import { Observer } from 'tailwindcss-intersect';
-      Observer.start();
-    </script>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <script
       defer
@@ -48,7 +47,14 @@ const { title } = Astro.props;
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content={description} />
     <title>{title}</title>
+    <link rel="canonical" href={canonicalUrl} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    <script>
+      import { Observer } from 'tailwindcss-intersect';
+      Observer.start();
+    </script>
   </head>
   <body
     class="bg-base-200 flex flex-col min-h-screen max-w-full m-0 overflow-x-hidden"
