added more descriptions

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,7 +10,7 @@ const allPosts = await getCollection('posts');
 const sortedPosts = sortPosts(allPosts).sortByDate();
 ---
 
-<Layout title="Crockett's Blog">
+<Layout title="Crockett's Blog" description="A collection of posts about self-hosting, web development, and cultural commentary">
   <div class="max-w-4xl mx-auto p-4 md:mt-8 mt-4">
     <h2 class="md:text-5xl text-2xl font-slab font-bold">
       Using a Randomness Beacon to Talk to God
