--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import SocialIcon from '../components/SocialIcon.astro';
 const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
 ---
 
-<Layout title="Crockett Ford">
+<Layout title="Crockett Ford's personal website" description="Fullstack developer, amateur critic.">
   <FixedSocialsBox />
   <LandingHero />
   <section id="work" class="bg-base-300 w-full">
