--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -26,7 +26,7 @@ const { tag } = Astro.params;
 const { posts } = Astro.props;
 ---
 
-<Layout title={tag}>
+<Layout title={tag} description=`A collection of posts tagged with ${tag}`>
   <div class="max-w-4xl m-4 p-4 mx-auto md:mt-8 mt-4">
     <div class="mb-8">
       <h2 class="text-2xl md:text-4xl font-slab font-bold">
