fixed top articles size and formatting, adjusted negative space in hero

--- a/src/components/LandingHero.astro
+++ b/src/components/LandingHero.astro
@@ -5,7 +5,7 @@ import TopArticles from './TopArticles.astro';
 import localBioPhoto from '../images/portrait-danielle-2022.jpg';
 ---
 
-<section class="max-w-7xl container mx-auto px-6">
+<section class="max-w-7xl container space-y-6 xl:space-y-8 mb-12 mx-auto px-6">
   <div
     class="grid grid-cols-1 pt-10 pb-6 lg:pt-20 md:grid-cols-2 lg:gap-8 place-items-center"
   >
